-------------------------- aqp 1.17.07 (2019-09-17) -------------------------
* generalize.hz() gets a \dots argument for passing additional arguments to grep(), e.g. perl=TRUE

-------------------------- aqp 1.17.06 (2019-07-15) -------------------------
* plotSPC() gains a new argument for relative positioning: relative.pos
* relative positioning helper function: fixOverlap(), see manual page for examples
* explainPlotSPC(), addDiagnosticBracket(), and addVolumeFraction() updated accordingly

-------------------------- aqp 1.17.05 (2019-05-18) -------------------------
* new functions colorContrast(), contrastClass(), and huePosition()

-------------------------- aqp 1.17.02 (2019-03-15) -------------------------
* fixed nasty bug in [-indexing when SPC contains a single profile (https://github.com/ncss-tech/aqp/issues/85)
* new function validSpatialData() to test for place-holder contents of @sp
* rebuildSPC() will now correct invalid, place-holder SpatialPoints in @sp

-------------------------- aqp 1.17.01 (2019-02-07) -------------------------
* new version number system
* plotSPC() will now attempt to create multi-row legends when using a factor > n.legend levels
* plotSPC() will now generate >  10 colors for legends associated with a factor (https://github.com/ncss-tech/aqp/issues/9)
* munsell2rgb() will now return CIE LAB coordinates if requested (https://github.com/ncss-tech/aqp/issues/69)

-------------------------- aqp 1.17 (2018-12-28) -------------------------
* CRAN release
* aggregateColor() gets a new feature, similar colors can be grouped via cluster::pam()
* new functions: previewColors(), colorQuantiles(), plotColorQuantiles()
* new function: horizonDepths()<-, edit top/bottom names after SPC init
* new function: profile_id()<-, edit profile IDs after init; be careful!
* new functions: hzID() and hzID()<-, get/set unique horizon IDs
* new functions: hzidname() and hzidname()<-, get/set column containing unique horizon IDs